syntax = "proto3";

package go.micro.srv.user;

option go_package = "./proto/account;account";

service Account {
    rpc Login (LoginRequest) returns (LoginResponse) {
    }
    rpc Logout (Request) returns (LogoutResponse) {
    }
    rpc Info (Request) returns (InfoResponse) {
    }
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message Request {
    string id = 1;
}

message LogoutResponse {
}

message InfoResponse {
    string name = 1;
    string avatar = 2;
}
